--- a/package.json
+++ b/package.json
@@ -9,6 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-select": "^2.2.5",
+    "@radix-ui/react-slider": "^1.3.5",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tabs": "^1.1.12",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "framer-motion": "^12.23.6",
     "lucide-react": "^0.525.0",
     "next": "15.4.2",
@@ -17,6 +23,7 @@
     "react-dom": "19.1.0",
     "react-intersection-observer": "^9.16.0",
     "swiper": "^11.2.10",
+    "tailwind-merge": "^3.3.1",
     "tailwind-scrollbar-hide": "^4.0.0"
   },
   "devDependencies": {
@@ -28,6 +35,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.4.2",
     "tailwindcss": "^4.1.11",
+    "tw-animate-css": "^1.3.6",
     "typescript": "^5"
   }
 }
