--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "postcss": "^8.5.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
     "swiper": "^11.2.10",
     "tailwind-merge": "^3.3.1",
